--- a/backup.env
+++ b/backup.env
@@ -19,6 +19,7 @@ BACKUP_SERVER_DEST=
 # Local backup folders (created in working dir)
 BACKUP_FILES_DIR=files_to
 BACKUP_SQL_DIR=mysql
+BACKUP_FOLDERS=
 
 # MySQL (host-side, non-docker)
 MYSQL_USERNAME=root
