cleanup:  setup cleanup
This will allow you to keep a few backups without filling up
your backup drive.

--- a/backup.env
+++ b/backup.env
@@ -39,3 +39,6 @@ NEXTCLOUD_OCC_PATH=/var/www/html/nc_here/occ
 # DATABASES_<i>_NAME=db
 # DATABASES_<i>_USER=user
 # DATABASES_<i>_PASSWORD=pass
+
+# Cleanup values
+TOTAL_BACKUPS_TO_KEEP=2
