rsync:  setup bandwidth limit in config file

--- a/backup.env
+++ b/backup.env
@@ -15,6 +15,7 @@ BACKUP_SERVER_PASSWORD=PASSWORD
 BACKUP_SERVER_IP=127.0.0.1
 # If empty, defaults to /home/USER/backups/<SERVER_NAME>
 BACKUP_SERVER_DEST=
+BACKUP_BANDWIDTH_LIMIT=200m
 
 # Local backup folders (created in working dir)
 BACKUP_FILES_DIR=/full/path/to/files_to
