nextcloud:  setup nextcloud path vs location to occ

--- a/backup.env
+++ b/backup.env
@@ -32,7 +32,8 @@ CHANNEL_ID=
 
 # Nextcloud maintenance command paths
 NEXTCLOUD_OCC_USER=www-data
-NEXTCLOUD_OCC_PATH=/var/www/html/nc_here/occ
+# Make sure you use the full path with tailing '/'
+NEXTCLOUD_PATH=/var/www/html/nc_here/
 
 # Databases for docker containers
 # Use indexed variables like below (0..N contiguous). Missing indices ignored.
