--- a/backup.env
+++ b/backup.env
@@ -32,10 +32,12 @@ MYSQL_PASSWORD=secret
 BOT_ID=
 CHANNEL_ID=
 
-# Nextcloud maintenance command paths
-NEXTCLOUD_OCC_USER=www-data
 # Make sure you use the full path with tailing '/'
 NEXTCLOUD_PATH=/var/www/html/nc_here/
+
+# Nextcloud maintenance mode commands (optional overrides)
+# Example:
+NEXTCLOUD_MAINTENANCE="sudo -u www-data php $NEXTCLOUD_PATH/occ maintenance:mode"
 
 # Databases for docker containers
 # Use indexed variables like below (0..N contiguous). Missing indices ignored.
