--- a/backup.env
+++ b/backup.env
@@ -19,6 +19,9 @@ BACKUP_SERVER_IP=127.0.0.1
 BACKUP_SERVER_DEST=
 BACKUP_BANDWIDTH_LIMIT=200m
 
+COMMAND_BEFORE_BACKUP=""
+COMMAND_AFTER_BACKUP=""
+
 # Local backup folders (created in working dir)
 BACKUP_FILES_DIR=/full/path/to/files_to
 BACKUP_SQL_DIR=/full/path/to/mysql
@@ -36,7 +39,7 @@ CHANNEL_ID=
 NEXTCLOUD_PATH=/var/www/html/nc_here/
 
 # Nextcloud maintenance mode commands (optional overrides)
-NEXTCLOUD_MAINTENANCE="sudo -u www-data php $NEXTCLOUD_PATH/occ maintenance:mode"
+NEXTCLOUD_MAINTENANCE=sudo -u www-data php $NEXTCLOUD_PATH/occ maintenance:mode
 
 # Databases for docker containers
 # Use indexed variables like below (0..N contiguous). Missing indices ignored.
